Added main font

--- a/community.html
+++ b/community.html
@@ -7,6 +7,8 @@
   <meta name="description"
     content="The Las Vegas Scholars Program community is filled with incredible UNLV students and faculty.">
   <link rel="icon" type="image/png" href="img/icons/favicon.png">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/community.css">
   <script src="js/main.js" defer></script>
