--- a/resources.html
+++ b/resources.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="The Las Vegas Scholars Program resources and frequently asked questions.">
   <link rel="icon" type="image/png" href="img/icons/favicon.png">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/resources.css">
   <script src="js/main.js" defer></script>
