Added header and footer

--- a/community.html
+++ b/community.html
@@ -17,7 +17,23 @@
 </head>
 
 <body>
-
+  <header class="main-container">
+    <img src="img/icons/LVSP-UNLVLogo.png" alt="Las Vegas Scholars Program">
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="#" class="current-page">Community</a>
+      <a href="resources.html">Resources</a>
+    </nav>
+  </header>
+  <footer>
+    <div class="award-info">
+      <p>Funded by the National Science Foundation</p>
+      <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1742607&HistoricalAwards=false">
+        Award #1742607
+      </a>
+    </div>
+    <img src="img/icons/NSF_4-Color_bitmap_Logo.jpg" alt="National Science Foundation Logo">
+  </footer>
 </body>
 
 </html>
