Finished home page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,99 @@
       <a href="resources.html">Resources</a>
     </nav>
   </header>
+  <main>
+    <section id="hero">
+      <img src="img/events/hero_background.jfif" alt="UNLV image by UNLV creative services" class="hero-background">
+      <div class="hero-content">
+        <div class="main-container">
+          <img src="img/icons/LVSP-CircularLogo.png" alt="Las Vegas Scholars Program Logo created by Kyla Sannadan"
+            class="hero-logo">
+          <div class="hero-text">
+            <p class="hero-subheading">
+              The Las Vegas Scholars Program helps aspiring scholars grow from students to
+              successful computer scientists and computer engineers by elevating their college experience.
+            </p>
+            <a href="#overview" class="hero-cta">Find out how!</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="overview" class="main-container">
+      <img src="img/icons/LVSP-RectangularLogo.png" alt="Las Vegas Scholars Program Logo created by Kyla Sannadan">
+      <p class="mission-statement">
+        Our mission is to support academically talented students with demonstrated financial need
+        to attain undergraduate degrees in computer engineering or computer science at the University
+        of Nevada, Las Vegas &#40;UNLV&#41;. Our impact is to improve and promote student's sense of
+        belonging on campus, in UNLV's College of Engineering, and in STEM fields. Our legacy is to
+        broaden opportunities and expand participation in STEM careers.
+      </p>
+      <div id="lvsp-video">
+        <iframe width="1024" height="576" src="https://www.youtube.com/embed/hkE0U1wKHCk" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </section>
+    <section id="benefits">
+      <div class="main-container">
+        <h2>Benefits</h2>
+        <div class="benefit-list">
+          <div class="benefit">
+            <img src="img/icons/dollar-sign.png" alt="Financial Support Icon by Kathy Vuong">
+            <h3>Financial Support</h3>
+            <p>
+              Up to $6,200 annual scholarship per student for up to 4 years.
+            </p>
+          </div>
+          <div class="benefit">
+            <img src="img/icons/scholar.png" alt="Peer Cohort and Faculty Mentoring Icon by Kathy Vuong">
+            <h3>Peer Cohort and Faculty Mentoring</h3>
+            <p>
+              Build an academic community/supportive network of peers in the program, in your department, and
+              across campus.
+              Establish a supportive relationship with a faculty mentor who can guide your success.
+            </p>
+          </div>
+          <div class="benefit">
+            <img src="img/icons/bridge.png" alt="Summer Bridge Program Icon by Kathy Vuong">
+            <h3>Summer Bridge Program</h3>
+            <p>
+              Students adjust to college life, meet new friends, learn about the department and the campus,
+              prepare for college-level math,
+              and earn three college credits towards their university degree during the summer bridge program.
+            </p>
+          </div>
+          <div class="benefit">
+            <img src="img/icons/family.png" alt="Family Engagement Icon by Kathy Vuong">
+            <h3>Family Engagement</h3>
+            <p>
+              Invite family members to attend faculty and staff-led workshops to
+              learn more about what it takes to succeed in college (academic expectations),
+              costs of attending/ways to pay for college (financial literacy),
+              and about available resources on campus and how to access them.
+            </p>
+          </div>
+          <div class="benefit">
+            <img src="img/icons/cog.png" alt="Industry Connections Icon by Kathy Vuong">
+            <h3>Industry Connections</h3>
+            <p>
+              Tour local STEM industry sites, participate in summer internships,
+              and participate in industry-sponsored senior design project activities.
+              Learn to develop an academic identity as an engineer, explore engineering careers,
+              network with engineering students, faculty and professors, and learn how to thrive and succeed.
+            </p>
+          </div>
+          <div class="benefit">
+            <img src="img/icons/research.png" alt="Research Opportunities Icon by Kathy Vuong">
+            <h3>Research Opportunities</h3>
+            <p>
+              Participate in research with engineering and education faculty. Build knowledge in engineering,
+              while documenting your story as a computer science or computer engineering student to inspire other
+              students like you to follow in your footsteps.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
   <footer>
     <div class="award-info">
       <p>Funded by the National Science Foundation</p>
