Changed to sticky header

--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 </head>
 
 <body>
-  <header class="main-container">
-    <img src="img/icons/LVSP-UNLVLogo.png" alt="Las Vegas Scholars Program">
-    <nav>
-      <a href="#" class="current-page">Home</a>
-      <a href="community.html">Community</a>
-      <a href="resources.html">Resources</a>
-    </nav>
+  <header>
+    <div class="main-container">
+      <img src="img/icons/LVSP-UNLVLogo.png" alt="Las Vegas Scholars Program">
+      <nav>
+        <a href="#" class="current-page">Home</a>
+        <a href="community.html">Community</a>
+        <a href="resources.html">Resources</a>
+      </nav>
+    </div>
   </header>
   <main>
     <section id="hero">
