--- a/resources.html
+++ b/resources.html
@@ -19,9 +19,9 @@
     <div class="main-container">
       <img src="img/icons/LVSP-UNLVLogo.png" alt="Las Vegas Scholars Program">
       <nav>
-        <a href="#" class="current-page">Home</a>
+        <a href="index.html">Home</a>
         <a href="community.html">Community</a>
-        <a href="resources.html">Resources</a>
+        <a href="#" class="current-page">Resources</a>
       </nav>
     </div>
   </header>
