Added resources page

--- a/resources.html
+++ b/resources.html
@@ -25,6 +25,87 @@
       </nav>
     </div>
   </header>
+  <main class="main-container">
+    <h1 class="page-title">Resources</h1>
+    <div class="resources">
+      <div class="resource">
+        <h2 class="resource-title">Are applications still open for the Las Vegas Scholars Program?</h2>
+        <p class="resource-text">
+          Right now applications are closed for the Las Vegas Scholars Program.
+          However, applications may open again in a future year pending additional funding.
+        </p>
+      </div>
+      <div class="resource">
+        <h2 class="resource-title">Are there laptops available for me to borrow from UNLV?</h2>
+        <p class="resource-text">
+          Yes, the Office of Information Technology (OIT) offers a
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSeHVo8Wevl99l3qn5DVYmZ5RYesoaJGgHHbj6M1b0v7KSMaeA/viewform">Technology
+            Loan Program</a>
+          for students who need laptops for school work.
+          The supply of laptops goes quickly, so request it early if you need one.
+        </p>
+      </div>
+      <div class="resource">
+        <h2 class="resource-title">Can I get Microsoft Word or other Microsoft Office applications for free through
+          UNLV?
+        </h2>
+        <p class="resource-text">
+          Yes, follow
+          <a href="https://www.unlv.edu/news/unlvtoday/office-365-now-free-faculty-staff-and-students">
+            these steps to install a free copy of Microsoft Office (Word, Excel, Powerpoint) on your
+            computer.
+          </a><br>
+        </p>
+      </div>
+      <div class="resource">
+        <h2 class="resource-title">How do I contact UNLV Financial Aid?</h2>
+        <p class="resource-text">
+          <a href="https://www.unlv.edu/finaid/">UNLV's Financial Aid website</a> lists their phone number,
+          and they suggest that this is the best way to contact them.
+          Once UNLV campus is open, you can also stop by their office and request an appointment.
+          Sometimes it, unfortunately, takes several attempts to get an answer. You can also request an
+          appointment with
+          Financial Aid by calling them. If you see that your financial aid is not getting disbursed, contact
+          UNLV Financial Aid immediately.
+        </p>
+      </div>
+      <div class="resource">
+        <h2 class="resource-title">How do I submit additional information to UNLV Financial Aid?</h2>
+        <p class="resource-text">
+          UNLV Financial Aid sometimes requests additional documentation.
+          You can submit these documents using the <a
+            href="https://unlvcrm.force.com/selfservice/login?ec=302&startURL=/selfservice/s/">Self-Service
+            Help Center</a>.
+          You should receive an email confirmation to your UNLV email that your documents were received.
+        </p>
+      </div>
+      <div class="resource">
+        <h2 class="resource-title">How do I report my LV Scholars scholarship on my tax returns?</h2>
+        <p class="resource-text">
+          Scholarships and grants are considered income. However, the portion of the scholarships/grants that
+          you use for tuition, books, etc. are tax-free.
+          Be sure to keep all receipts to document these expenses. <br>
+          <a href="https://www.irs.gov/taxtopics/tc421">The IRS website offers information on how to report
+            scholarship/grant money</a>.
+        </p>
+      </div>
+      <div class="resource">
+        <h2 class="resource-title">What do I do if I'm having a problem with my ACE account or WebCampus?</h2>
+        <p class="resource-text">
+          <a href="https://www.it.unlv.edu/it-help-desk">UNLV's Office of Information Technology (OIT)</a> is
+          a resource for technology issues regarding your ACE account or other UNLV-provided technology. <br>
+          You can contact them by:
+        </p>
+        <ol>
+          <li>Calling their helpline (recommended): <a href="tel:7028950777">702-895-0777</a></li>
+          <li>Filling out a help request form: <a
+              href="https://www.it.unlv.edu/it-help-desk/help-request">https://www.it.unlv.edu/it-help-desk/help-request</a>
+          </li>
+          <li>Emailing them: <a href="mailto:ithelp@unlv.edu">ithelp@unlv.edu</a></li>
+        </ol>
+      </div>
+    </div>
+  </main>
   <footer>
     <div class="award-info">
       <p>Funded by the National Science Foundation</p>
