Changed slideshow labels

--- a/community.html
+++ b/community.html
@@ -414,7 +414,7 @@
             </div>
             <div class="slideshow-controls">
               <button name="previous">&#10094</button>
-              <label>Welcome Orientation - 2019</label>
+              <label>Welcome Orientation (2019)</label>
               <button name="next">&#10095</button>
             </div>
           </div>
@@ -432,7 +432,7 @@
             </div>
             <div class="slideshow-controls">
               <button name="previous">&#10094</button>
-              <label>Summer Bridge Orientation - 2019</label>
+              <label>Summer Bridge Orientation (2019)</label>
               <button name="next">&#10095</button>
             </div>
           </div>
@@ -461,7 +461,7 @@
             </div>
             <div class="slideshow-controls">
               <button name="previous">&#10094</button>
-              <label>End of Semester Debrief - 2019</label>
+              <label>End of Semester Debrief (2019)</label>
               <button name="next">&#10095</button>
             </div>
           </div>
@@ -474,7 +474,7 @@
             </div>
             <div class="slideshow-controls">
               <button name="previous">&#10094</button>
-              <label>Welcome Orientation - 2020</label>
+              <label>Welcome Orientation (2020)</label>
               <button name="next">&#10095</button>
             </div>
           </div>
